--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bluetoothFailMessage">Bluetooth permissions not granted</string>
+    <string name="wifiFailMessage">WiFi permissions not granted</string>
     <string name="title_activity_notifier">NotifierActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="wifi_list">Wifi List</string>
+    <string name="location_list">Location List</string>
+    <string name="event_log">Event Log</string>
 </resources>
