--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bluetoothFailMessage">Bluetooth permissions not granted</string>
+    <string name="locationFailMessage">Location permissions not granted</string>
     <string name="wifiFailMessage">WiFi permissions not granted</string>
     <string name="title_activity_notifier">NotifierActivity</string>
     <string name="dummy_button">Dummy Button</string>
